percentage price spurts included